# SimShell

./: CMakeLists.txt  ls.c  main.c  main.cpp  mkdir.c  rm.c  rmdir.c  touch.c
